Updated index.html with custom changes

--- a/index.html
+++ b/index.html
@@ -174,15 +174,15 @@
                     <h3>Contact Information</h3>
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
-                        <p>info@prilenz.com</p>
+                        <p>engfeb29@gmail.com</p>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone"></i>
-                        <p>+1 (555) 123-4567</p>
+                        <p>+4 (475) 429-97095</p>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>New York, NY</p>
+                        <p>Middlesbrough, UK</p>
                     </div>
                     <div class="social-links">
                         <a href="#" aria-label="Instagram">
