Reverted to Unsplash images due to Google Drive link issues

--- a/index.html
+++ b/index.html
@@ -65,35 +65,35 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item visible" data-category="portrait" data-description="Professional portrait with natural lighting">
-                    <img src="https://drive.google.com/uc?export=view&id=1kqe6fRaoRvlLqIHFRO9VIYBCf7xRHK5q" alt="Portrait Study">
+                    <img src="https://images.unsplash.com/photo-1534447677768-be436bb09401?auto=format&fit=crop&w=800&q=80" alt="Portrait Study">
                     <div class="gallery-item-hover">
                         <h3>Portrait Study</h3>
                         <p>portrait</p>
                     </div>
                 </div>
                 <div class="gallery-item visible" data-category="portrait" data-description="Portrait captured during golden hour">
-                    <img src="https://drive.google.com/uc?export=view&id=13Gzjq5W21swSCQPXaoqytFW6I5wtfsQi" alt="Golden Hour Portrait">
+                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?auto=format&fit=crop&w=800&q=80" alt="Golden Hour Portrait">
                     <div class="gallery-item-hover">
                         <h3>Golden Hour Portrait</h3>
                         <p>portrait</p>
                     </div>
                 </div>
                 <div class="gallery-item visible" data-category="birthday" data-description="Joyful birthday celebration with friends and family">
-                    <img src="https://drive.google.com/uc?export=view&id=1rxj0TQ05GiqyMfOWrRhwCci0NcQivobs" alt="Birthday Celebration">
+                    <img src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?auto=format&fit=crop&w=800&q=80" alt="Birthday Celebration">
                     <div class="gallery-item-hover">
                         <h3>Birthday Celebration</h3>
                         <p>birthday</p>
                     </div>
                 </div>
                 <div class="gallery-item visible" data-category="birthday" data-description="Elegant birthday party with beautiful decorations">
-                    <img src="https://drive.google.com/uc?export=view&id=1UHO6-6GgMU_AmYFaL17giDXKhdhRTK15" alt="Elegant Birthday">
+                    <img src="https://images.unsplash.com/photo-1530103862676-de8c9debad1d?auto=format&fit=crop&w=800&q=80" alt="Elegant Birthday">
                     <div class="gallery-item-hover">
                         <h3>Elegant Birthday</h3>
                         <p>birthday</p>
                     </div>
                 </div>
                 <div class="gallery-item visible" data-category="graduation" data-description="Proud graduate celebrating their achievement">
-                    <img src="https://drive.google.com/uc?export=view&id=11WNwoNtHX1tjkGdYZFV5lYd8nDY57oQL" alt="Graduation Day">
+                    <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?auto=format&fit=crop&w=800&q=80" alt="Graduation Day">
                     <div class="gallery-item-hover">
                         <h3>Graduation Day</h3>
                         <p>graduation</p>
